# jackdaw5

./: .gitignore  Cargo.toml  rustfmt.toml  sample
note/: note.md
src/: ast.rs  char.rs  error.rs  function.rs  lexer.rs  main.rs  parse.rs  parser.rs  pos.rs  score.rs  sound.rs  test  token.rs  value.rs
src/lexer/: reader.rs  slicer.rs
src/score/: compiler.rs  lexer.rs  parser.rs  token.rs
src/sound/: sin.rs
