[package]
name = "jackdaw"
version = "0.1.0"
authors = ["fiveseven-lambda <fiveseven.lambda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
num = "0.4.0"
rand = "0.8.3"
thiserror = "1.0.24"
